@@ -5,6 +5,9 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     one in the source. Thanks to Nicolas François. Closes: #379320
   * Allow dpkg-buildpackage to properly override '-b' when passed after '-B'.
     Thanks to Julian Gilbey. Closes: #397479
+  * Move retrieval of uid and gid information from controllib.pl into a
+    function, so that scripts not needing it do not execute that code.
+    Based on a patch by Riku Voipio. Closes: #396884
 
  -- Guillem Jover <guillem@debian.org>  Tue,  9 Jan 2007 22:48:47 +0200
 
