@@ -1,3 +1,14 @@
+2007-01-11  Riku Voipio <riku.voipio@iki.fi>
+	    Guillem Jover <guillem@debian.org>
+
+	* scripts/controllib.pl: Move the getlogin and fowner initialization
+	to ...
+	(getfowner): ...here. New function.
+	* scripts/dpkg-source.pl: Use getfowner() instead of @fowner.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+	* scripts/dpkg-distaddfile.pl: Likewise.
+	* scripts/dpkg-shlibdeps.pl: Likewise.
+
 2007-01-10  Julian Gilbey  <jdg@polya.uklinux.net>
 
 	* scripts/dpkg-buildpackage.sh: Allow '-b' to properly override a
